some layout changes
some layout changes

--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -166,8 +166,9 @@
                                                         </div>
                                                     </div>
                                                     <!-- End Checkbox -->
-                                                    <button type="submit" class="btn btn-primary w-50 rounded-sm transition-3d-hover font-size-16 font-weight-bold py-3 m-auto">Skip the Payment</button>
                                                 </div>
+                                                <div class="w-100"></div>
+                                                <button type="submit" class="btn btn-primary w-50 rounded-sm transition-3d-hover font-size-16 font-weight-bold py-3 m-auto">Confirm Booking</button>
                                             </div>
                                         </form>
                                         <!-- End Payment Form -->
