Fixed images upload issue & userprofile edit issues

--- a/views/edit-user-profile.ejs
+++ b/views/edit-user-profile.ejs
@@ -96,8 +96,8 @@
                         <div class="d-flex justify-content-between mb-1">
                             <div class="custom-control custom-switch mb-4">
                                 <input type="checkbox"
-                                       class="custom-control-input" id="HaveProperty" name="role" value="owner">
-                                <label class="custom-control-label" for="HaveProperty">Owner</label>
+                                       class="custom-control-input" id="HaveProperty" name="role" value="User" onclick="return false;">
+                                <label class="custom-control-label" for="HaveProperty">User</label>
                             </div>
                         </div>
                         <% if(action === "edit") { %>
