--- a/views/user-dashboard.ejs
+++ b/views/user-dashboard.ejs
@@ -60,7 +60,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link font-weight-medium" id="pills-seven-example-t1-tab" data-toggle="pill" href="#profile" role="tab" aria-controls="pills-seven-example-t1" aria-selected="true">
+                    <a class="nav-link font-weight-medium" id="pills-seven-example-t1-tab"  href="/edit-user-profile/<%= userInfo._id%>" role="tab" aria-controls="pills-seven-example-t1" aria-selected="true">
                         <div class="d-flex flex-column flex-md-row  position-relative text-dark align-items-center">
                             <span class="tabtext font-weight-semi-bold">Your Profile</span>
                         </div>
